--- a/header/topHeader.css
+++ b/header/topHeader.css
@@ -6,6 +6,11 @@ input {
 	font-size: 0.96vw;
 }
 
+html, body {
+	max-width: 100%;
+	overflow-x: hidden;
+}
+
 * {
 	margin: 0;
 	padding: 0;
@@ -19,7 +24,7 @@ a {
 
 ul {
 	list-style: none;
-	
+
 }
 
 header.topPageHeader {
